# ai-medical-researcher

./: .gitignore  README.md  docker-compose.yml  package.json
apps/ai/: .env.example  Dockerfile  pyproject.toml
apps/ai/app/: main.py
apps/ai/app/retrievers/: clinicaltrials.py  openalex.py  pubmed.py
apps/ai/app/services/: llm.py
apps/api/: .env.example  package.json  tsconfig.json
apps/api/data/: sessions.json
apps/api/src/: server.ts  storage.ts
apps/web/: index.html  package.json  tsconfig.node.tsbuildinfo
apps/web/src/: App.tsx  styles.css
