[project]
name = "curalink-ai"
version = "0.1.0"
description = "FastAPI service for evidence-backed medical research"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
